Updated packages to the latest versions. Fixed what is not compatible

--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
   "name": "chat-example",
-  "version": "0.0.0",
+  "version": "0.0.1w",
   "description": "A chat example to showcase how to use `socket.io` with a static `express` server with `async` for control flow.",
   "main": "server.js",
   "repository": "",
-  "author": "Mostafa Eweda <mo.eweda@gmail.com>",
+  "author": "Mostafa Eweda <mo.eweda@gmail.com>, Rodrigo Vargas <rodrigovargas123@gmail.com>",
   "dependencies": {
-    "async": "~0.2.8",
-    "express": "~3.2.4",
-    "socket.io": "~0.9.14"
+    "async": "3.2.3",
+    "express": "4.17.3",
+    "socket.io": "4.4.1"
   }
 }
